add order server

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# mysql
+spring.datasource.url=jdbc:mysql://22.22.22.22/tmall
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis
+#实体类包
+mybatis.typeAliasesPackage=com.java4all.entity
+#mapper.xml文件
+mybatis.mapperLocations=classpath:mapper/*.xml
 
