--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # mysql
-spring.datasource.url=jdbc:mysql://22.22.22.22/tmall
+spring.datasource.url=jdbc:mysql://22.22.22.22/java4all
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
