--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8081
+# mysql
+spring.datasource.url=jdbc:mysql://116.62.62.26/seat-account
+spring.datasource.username=root
+spring.datasource.password=14789632
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis
+#实体类包
+mybatis.typeAliasesPackage=com.java4all.account.entity
+#mapper.xml文件
+mybatis.mapperLocations=classpath:mapper/*.xml
+
