--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+server.port=8080
 # mysql
-spring.datasource.url=jdbc:mysql://22.22.22.22/java4all
+spring.datasource.url=jdbc:mysql://116.62.62.26/seat-order
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=14789632
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #mybatis
 #实体类包
-mybatis.typeAliasesPackage=com.java4all.entity
+mybatis.typeAliasesPackage=com.java4all.order.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+
 
