--- a/storage/src/main/resources/application.properties
+++ b/storage/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=8082
+# mysql
+spring.datasource.url=jdbc:mysql://116.62.62.26/seat-storage
+spring.datasource.username=root
+spring.datasource.password=14789632
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#mybatis
+#实体类包
+mybatis.typeAliasesPackage=com.java4all.storage.entity
+#mapper.xml文件
+mybatis.mapperLocations=classpath:mapper/*.xml
+
+
+
