--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+spring.application.name=order-server
 # mysql
 spring.datasource.url=jdbc:mysql://116.62.62.26/seat-order
 spring.datasource.username=root
