--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=account-server
 # mysql
 spring.datasource.url=jdbc:mysql://116.62.62.26/seat-account
 spring.datasource.username=root
