--- a/storage/src/main/resources/application.properties
+++ b/storage/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+spring.application.name=storage-server
 # mysql
 spring.datasource.url=jdbc:mysql://116.62.62.26/seat-storage
 spring.datasource.username=root
