add order springcloud

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -11,5 +11,5 @@ mybatis.typeAliasesPackage=com.java4all.order.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
 
-
+feign.hystrix.enabled=true
 
