add seata to order

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 
 feign.hystrix.enabled=true
 
+spring.cloud.alibaba.seata.tx-service-group=my_test_tx_group
+
+
