--- a/storage/src/main/resources/application.properties
+++ b/storage/src/main/resources/application.properties
@@ -11,5 +11,8 @@ mybatis.typeAliasesPackage=com.java4all.storage.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
 
+spring.cloud.alibaba.seata.tx-service-group=my_test_tx_group
+
+
 
 
