--- a/account/pom.xml
+++ b/account/pom.xml
@@ -63,10 +63,12 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-alibaba-seata</artifactId>
+			<version>2.1.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>io.seata</groupId>
 			<artifactId>seata-all</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 	</dependencies>
 
