--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -11,5 +11,10 @@ mybatis.typeAliasesPackage=com.java4all.account.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
 
+eureka.instance.hostname=127.0.0.1
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+
+logging.level.io.seata=debug
 spring.cloud.alibaba.seata.tx-service-group=fsp_tx_group
 
