--- a/storage/src/main/resources/application.properties
+++ b/storage/src/main/resources/application.properties
@@ -11,7 +11,11 @@ mybatis.typeAliasesPackage=com.java4all.storage.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
 
-logging.level.io.seata=warn
+eureka.instance.hostname=127.0.0.1
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+
+logging.level.io.seata=debug
 spring.cloud.alibaba.seata.tx-service-group=fsp_tx_group
 
 
