--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -11,8 +11,12 @@ mybatis.typeAliasesPackage=com.java4all.order.entity
 #mapper.xml文件
 mybatis.mapperLocations=classpath:mapper/*.xml
 
-feign.hystrix.enabled=true
+eureka.instance.hostname=127.0.0.1
+eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
 
+feign.hystrix.enabled=true
+logging.level.io.seata=debug
 spring.cloud.alibaba.seata.tx-service-group=fsp_tx_group
 
 
