--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 eureka:
     instance:
-        hostname: 127.0.0.1
+        hostname: localhost
         prefer-ip-address: true
     client:
         serviceUrl:
