--- a/account/src/main/resources/registry.conf
+++ b/account/src/main/resources/registry.conf
@@ -8,7 +8,7 @@ registry {
     cluster = "default"
   }
   eureka {
-    serviceUrl = "http://127.0.0.1:8761/eureka"
+    serviceUrl = "http://localhost:8761/eureka"
     application = "default"
     weight = "1"
   }
