--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
 logging:
     level:
         io:
-            seata: debug
+            seata: info
 mybatis:
     mapperLocations: classpath:mapper/*.xml
     typeAliasesPackage: com.java4all.account.entity
