--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
             defaultZone: http://${eureka.instance.hostname}:8761/eureka/
 feign:
     hystrix:
-        enabled: true
+        enabled: false
 logging:
     level:
         io:
