--- a/account/pom.xml
+++ b/account/pom.xml
@@ -70,6 +70,18 @@
 			<artifactId>seata-all</artifactId>
 			<version>0.8.0</version>
 		</dependency>
+		<!--如果配置中心使用zk，需要引入-->
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
